--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,6 +2,35 @@ body {
     color: red;
 }
 
-@media screen and (max-width: 700px) {
-    /*div.nav_bar*/
+@media screen and (max-width: 730px) {
+    ul.link li {
+        display: block;
+        text-align: center;
+        /*border: 2px solid #FFFFFF;*/
+        border-bottom: 2px solid #FFFFFF;
+    }
+
+    ul.link li:last-child {
+        border-bottom: none;
+    }
+
+    div.nav_menu {
+        background-color: #a6a6a6;
+        display: inline-block;
+        padding: 5px 15px;
+        cursor: pointer;
+        float: right;
+    }
+
+    div.nav_menu:hover {
+        background-color: #cecece;
+    }
+
+    ul.link {
+        display: none;
+    }
+
+    ul.link_show {
+        display: block;
+    }
 }
