restructure directory mvc

--- a/others/yinghua/view/login.html
+++ b/others/yinghua/view/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Log In</title>
-    <link rel="stylesheet" type="text/css" href="yh_style.css">
+    <link rel="stylesheet" type="text/css" href="../style/login.css">
 </head>
 <body>
 
