--- a/others/yinghua/view/register.html
+++ b/others/yinghua/view/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
-    <link rel="stylesheet" type="text/css" href="yh_style.css">
+    <link rel="stylesheet" type="text/css" href="../style/register.css">
 </head>
 <body>
 
