username validation complete

--- a/others/yinghua/view/register.html
+++ b/others/yinghua/view/register.html
@@ -4,45 +4,50 @@
     <meta charset="UTF-8">
     <title>Register</title>
     <link rel="stylesheet" type="text/css" href="../style/register.css">
-</head>
+
+    <!--Use Google CDN Jquery script for easier integration test -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="../controller/register/register.js"></script>
+
 <body>
 
 <!-- Expected parameter to be developed in future: Action on database, Method with GET or POST -->
 <form id="registerForm">
     <div>
         <p>
-            <!--The username should only allow lower case and at least 5 characters, maximum 50 characters-->
             <label>
-                User name: <input type="text" placeholder="yinghua" validate="/^[a-z0-9_\-]{5,50}/" title="Please match the username format"name="userName" required>
+                User name: <input type="text" id="username" placeholder="yinghua" validate="/^[a-z0-9_\-]{5,50}/" title="Please match the username format"name="userName" required>
             </label>
         </p>
 
-        <p class="login_warning_message">The username shall contain at least 5 characters long with lowercase letter and maximum 50 characters. </p>
+        <button onClick="test()"></button>
+
+        <p class="warning_message" hide>The username shall contain at least 5 characters long with lowercase letter and maximum 50 characters. </p>
 
         <p>
             <label>
-                Password: <input type="password" pattern="/^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])\w{8,}$/" title="Please match the password format" name="password" required>
-            </label>
-        </p>
-
-        <p>
-            <label>
-                Retype-Password: <input type="password" name="retypePassword" required>
-            </label>
-        </p>
-
-        <p class="login_warning_message">The password shall contain at least six characters long with uppercase and lowercase letter. </p>
-
-
-        <p>
-            <label>
-                First name: <input type="text" placeholder="Yinghua" validate="/[A-Za-z]/" title="uppercase and lowercase" name="firstName" required>
+                Password: <input type="password" pattern="/^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])\w{8,}$/" title="Please match the password format" name="password"  >
             </label>
         </p>
 
         <p>
             <label>
-                Last name: <input type="text" placeholder="Chai" validate="/[A-Za-z]/" title="uppercase and lowercase" name="lastName" required>
+                Retype-Password: <input type="password" name="retypePassword" >
+            </label>
+        </p>
+
+        <p class="warning_message">The password shall contain at least six characters long with uppercase and lowercase letter. </p>
+
+
+        <p>
+            <label>
+                First name: <input type="text" placeholder="Yinghua" validate="/[A-Za-z]/" title="uppercase and lowercase" name="firstName"  >
+            </label>
+        </p>
+
+        <p>
+            <label>
+                Last name: <input type="text" placeholder="Chai" validate="/[A-Za-z]/" title="uppercase and lowercase" name="lastName"  >
             </label>
         </p>
 
@@ -51,14 +56,14 @@
 
         <p>
             <label>
-                Email Address: <input type="text" placeholder="sample@hotmail.com" validate="/^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/" title="Please match email format" name="emailAddress" required>
+                Email Address: <input type="text" placeholder="sample@hotmail.com" validate="/^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/" title="Please match email format" name="emailAddress"  >
             </label>
         </p>
 
         <p>
             <label>
                 <!-- To be implement validation for telephone -->
-                Telephone: +6<input type="text" placeholder="012-3465893" pattern="\d{3}-\d{7,8}" title="Please match the telephone format" name="emailAddress" required>
+                Telephone: +6<input type="text" placeholder="012-3465893" pattern="\d{3}-\d{7,8}" title="Please match the telephone format" name="emailAddress"  >
             </label>
         </p>
 
