--- a/others/yinghua/view/register.html
+++ b/others/yinghua/view/register.html
@@ -24,7 +24,7 @@
 
     <p>
         <label>
-            Password: <input type="password" id="password" name="password" >
+            Password: <input type="password" id="password" name="password">
         </label>
     </p>
 
@@ -36,34 +36,35 @@
 
     <p class="warning_message" id="password_warning"></p>
 
-
     <p>
         <label>
-            First name: <input type="text" placeholder="Yinghua" validate="/[A-Za-z]/" title="uppercase and lowercase" name="firstName"  >
+            First name: <input type="text" id="firstname" placeholder="Yinghua" name="firstname">
         </label>
     </p>
 
     <p>
         <label>
-            Last name: <input type="text" placeholder="Chai" validate="/[A-Za-z]/" title="uppercase and lowercase" name="lastName"  >
+            Last name: <input type="text" id="lastname" placeholder="Chai" name="lastname">
         </label>
     </p>
 
-    <p class="login_warning_message">The names shall contain only uppercase and lowercase letter. </p>
-
+    <p class="warning_message" id="name_warning"></p>
 
     <p>
         <label>
-            Email Address: <input type="text" placeholder="sample@hotmail.com" validate="/^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/" title="Please match email format" name="emailAddress"  >
+            Email Address: <input type="text" id="email" placeholder="sample@hotmail.com" name="email">
         </label>
     </p>
 
+    <p class="warning_message" id="email_warning"></p>
+
     <p>
         <label>
-            <!-- To be implement validation for telephone -->
-            Telephone: +6<input type="text" placeholder="012-3465893" pattern="\d{3}-\d{7,8}" title="Please match the telephone format" name="emailAddress"  >
+            Telephone: +6<input type="text" id="telephone" placeholder="012-3465893" name="telephone"  >
         </label>
     </p>
+
+    <p class="warning_message" id="telephone_warning"></p>
 
     <p>
         Register as :
