--- a/others/yinghua/view/register.html
+++ b/others/yinghua/view/register.html
@@ -12,7 +12,7 @@
 <body>
 
 <!-- Expected parameter to be developed in future: Action on database, Method with GET or POST -->
-<form method="post" id="registerForm" onsubmit="return validation()" action="#">
+<form method="get" id="registerForm" onsubmit="return validation()">
 <div>
     <p>
         <label>
@@ -75,7 +75,7 @@
     </p>
 
 
-    <button type="submit" id="register">Register</button>
+    <button type="submit" id="register" href="login_selection.html">Register</button>
 </div>
 </form>
 
