--- a/others/yinghua/view/register.html
+++ b/others/yinghua/view/register.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
-    <link rel="stylesheet" type="text/css" href="../style/register.css">
+    <link rel="stylesheet" type="text/css" href="../style/app.css">
 
     <!--Use Google CDN Jquery script for easier integration test -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../controller/register/validation.js"></script>
+    <script type="text/javascript" src="../controller/register.js"></script>
 
 <body>
 
@@ -75,7 +75,7 @@
     </p>
 
 
-    <button type="submit" id="register" href="login_selection.html">Register</button>
+    <button type="submit" id="register">Register</button>
 </div>
 </form>
 
