login and registration done

--- a/others/yinghua/view/login.html
+++ b/others/yinghua/view/login.html
@@ -40,6 +40,10 @@
     </div>
 </form>
 
+<div>
+    <p>Do not have an account? <a href="register.html">Register here.</a></p>
+</div>
+
 </div>
 </body>
 </html>
