error message on login

--- a/others/yinghua/view/login.html
+++ b/others/yinghua/view/login.html
@@ -44,14 +44,12 @@
             <option value="organizer">Organizer</option>
             </select>
 
-            <p>Do not have an account? <a href="register.html" style="color:darkblue"><b>Register Here.</b></a></p>
+            <p>Do not have an account? <a href="register.html" style="color:darkblue"><b>Register Here</b></a></p>
 
             <button class="submitButton" type="submit" id="login">Login</button>
 
-
+            <p class="warning_message" id="login_warning"></p>
         </div>
-
-
     </div>
 
 
