--- a/others/yinghua/style/login.css
+++ b/others/yinghua/style/login.css
@@ -1,7 +1,7 @@
 form {
     border: 3px solid deepskyblue;
     width: 500px;
-    height: 735px;
+    height: 775px;
     margin: 0 auto;
 }
 
@@ -61,5 +61,9 @@ p {
     float: left;
     padding-left: 30px;
     font-family: 'Roboto', sans-serif;
+}
+
+select {
+    background-color: white;
 }
 
