--- a/others/yinghua/style/register.css
+++ b/others/yinghua/style/register.css
@@ -1,4 +1,16 @@
-.warning_message {
-    font-size: x-small;
-    color: red;
+.fontStyle {
+    float: left;
+    padding-left: 30px;
+    font-family: 'Roboto', sans-serif;
+    padding-top: 5px;
+    padding-bottom: 7px;
 }
+
+.registerForm {
+    border: 3px solid deepskyblue;
+    width: 500px;
+    height: 820px;
+    margin: 0 auto;
+    border-radius: 30px;
+}
+
