--- a/others/yinghua/view/register.html
+++ b/others/yinghua/view/register.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Register</title>
     <link rel="stylesheet" type="text/css" href="../style/app.css">
+    <link rel="stylesheet" type="text/css" href="../style/register.css">
+
+    <!--Use Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Questrial|Roboto" rel="stylesheet">
 
     <!--Use Google CDN Jquery script for easier integration test -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -13,70 +17,46 @@
 
 <!-- Expected parameter to be developed in future: Action on database, Method with GET or POST -->
 <form method="get" id="registerForm" onsubmit="return validation()">
-<div>
-    <p>
+    <div class="detailContainer">
+        <h2>Account Registration</h2>
         <label>
-            User name: <input type="text" id="username" placeholder="yinghua" name="username" required>
+            <span class="fontStyle">User name</span><input type="text" id="username" placeholder="At least 5 characters with only lowercase" name="username" required>
         </label>
-    </p>
 
-    <p class="warning_message" id="user_warning"></p>
-
-    <p>
         <label>
-            Password: <input type="password" id="password" name="password" required>
+            <span class="fontStyle">Password</span><input type="password" id="password" name="password" placeholder="At least 8 characters with uppercase, lowercase and numbers"required>
         </label>
-    </p>
 
-    <p>
         <label>
-            Retype-Password: <input type="password" id="retypePassword" name="retypePassword" required>
+            <span class="fontStyle">Retype-Password</span> <input type="password" id="retypePassword" name="retypePassword" placeholder="Match the password"required>
         </label>
-    </p>
 
-    <p class="warning_message" id="password_warning"></p>
-
-    <p>
         <label>
-            First name: <input type="text" id="firstname" placeholder="Yinghua" name="firstname" required>
+            <span class="fontStyle">First name</span><input type="text" id="firstname" name="firstname" placeholder="Only alphabets" required>
         </label>
-    </p>
 
-    <p>
         <label>
-            Last name: <input type="text" id="lastname" placeholder="Chai" name="lastname" required>
+            <span class="fontStyle">Last name</span><input type="text" id="lastname" name="lastname" placeholder="Only alphabets" required>
         </label>
-    </p>
 
-    <p class="warning_message" id="name_warning"></p>
-
-    <p>
         <label>
-            Email Address: <input type="text" id="email" placeholder="sample@hotmail.com" name="email" required>
+            <span class="fontStyle">Email Address</span><input type="text" id="email" placeholder="Email format: test@hotmail.com" name="email" required>
         </label>
-    </p>
 
-    <p class="warning_message" id="email_warning"></p>
-
-    <p>
         <label>
-            Telephone: +6<input type="text" id="telephone" placeholder="012-3465893" name="telephone" required>
+            <span class="fontStyle">Telephone</span><input type="text" id="telephone" placeholder="Malaysia telephone format: 012-2345136" name="telephone" required>
         </label>
-    </p>
 
-    <p class="warning_message" id="telephone_warning"></p>
-
-    <p>
-        Register as :
+        <span class="fontStyle">Register as </span>
         <select name="register_choice" id="role">
             <option value="user">User</option>
             <option value="organizer">Organizer</option>
         </select>
-    </p>
 
+        <p class="warning_message" id="register_warning"></p>
 
-    <button type="submit" id="register">Register</button>
-</div>
+        <button type="submit" id="register">Register</button>
+    </div>
 </form>
 
 </body>
