--- a/others/alex/css/view_event.css
+++ b/others/alex/css/view_event.css
@@ -19,14 +19,16 @@
 #page-wrap {
     position: relative;
     z-index: 1;
-    width: 1000px;
-    margin: 50px auto;
+    /*width: 1000px;*/
+    margin: 50px 50px;
     padding: 20px;
     background: #E8DAEF;
     opacity: 1.9;
     -moz-box-shadow: 0 0 20px black;
     -webkit-box-shadow: 0 0 20px black;
     box-shadow: 0 0 20px black;
+    display: flex;
+    flex-direction: row-reverse;
 }
 
 *{
@@ -145,4 +147,12 @@ img:hover {
     color: #000;
     text-decoration: none;
     cursor: pointer;
+}
+
+.evt_box_left {
+    flex: 2;
+}
+
+.evt_box_right {
+    flex: 1;
 }
