--- a/others/alex/css/responsive.css
+++ b/others/alex/css/responsive.css
@@ -1,8 +1,6 @@
-@media screen and(max-width:771px)
-{
-
-
+@media screen and (max-width:650px) {
     #page-wrap{
-        width: 100px;
+        flex-direction: column-reverse;
+        align-items: center;
     }
 }
