--- a/others/alex/css/view_event.css
+++ b/others/alex/css/view_event.css
@@ -20,9 +20,9 @@
     position: relative;
     z-index: 1;
     /*width: 1000px;*/
-    margin: 50px 50px;
+    margin: 50px 13%;
     padding: 20px;
-    background: #46EFF5;
+    background: #e8DAEF;
     opacity: 1.9;
     -moz-box-shadow: 0 0 20px black;
     -webkit-box-shadow: 0 0 20px black;
@@ -86,25 +86,24 @@ p {
 }
 
 .margin{
-    margin-right:418px;
-}
-
-
-
- img{
- }
-
-img:hover {
+    margin-right: 10%;
+    text-align: justify;
 }
 
 .opacity {
-    width:478px;
-    height:318px;
+
+}
+
+.opacity img {
+    max-height: 100%;
+    max-width: 100%;
+    height: auto;
+    width: auto;
     opacity: 0.7;
     filter: alpha(opacity=50);
 }
 
-.opacity:hover {
+.opacity img:hover {
     opacity: 1.0;
     filter: alpha(opacity=100);
     cursor: pointer;
@@ -151,8 +150,10 @@ img:hover {
 
 .evt_box_left {
     flex: 2;
+    border: 20px solid transparent;
 }
 
 .evt_box_right {
     flex: 1;
+    border: 20px solid transparent;
 }
