- delete event button fully working now - delete event combine with main html

--- a/view/browse.html
+++ b/view/browse.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Browse Event</title>
-        <link rel="stylesheet" href="../style/browse.css">
         <script type="text/javascript" src="../script/jquery-3.2.1.min.js"></script>
         <script type="text/javascript" src="../script/menuIcon.js"></script>
-        <script type="text/javascript" src="../script/saveEventID.js"></script>
+        <script type="text/javascript" src="../script/ssFunction.js"></script>
+        <link rel="stylesheet" href="../style/browse.css" />
         <link rel="stylesheet" href="../style/global_nav.css" />
         <link rel="stylesheet" href="../style/responsive.css" media="screen and (max-width: 900px)" />
     </head>
