-seperate admin and user broswe event

--- a/view/browse.html
+++ b/view/browse.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="nav_container">
-            <script language="javascript" type="text/javascript" src="../script/navigation_bar.js"></script>
+            <script language="javascript" type="text/javascript" src="../script/nav_bar_user.js"></script>
         </div>
         <div class="browse_container">
                 <script language="javascript" type="text/javascript" src="../script/getEventInfo.js"></script>
