--- a/view/event_list.html
+++ b/view/event_list.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="nav_container">
-            <script language="javascript" type="text/javascript" src="../script/navigation_bar.js"></script>
+            <script language="javascript" type="text/javascript" src="../script/nav_bar_admin.js"></script>
         </div>
         <div class="browse_container">
             <script language="javascript" type="text/javascript" src="../script/eventList.js"></script>
