--- a/view/view_event.html
+++ b/view/view_event.html
@@ -14,7 +14,7 @@
 
 	<body>
 		<div class="nav_container">
-			<script language="javascript" type="text/javascript" src="../script/navigation_bar.js"></script>
+			<script language="javascript" type="text/javascript" src="../script/nav_bar_user.js"></script>
 		</div>
 
 		<div id="page-wrap">
