-about combined wih main -create and update event combined with main -navigation bar navigate function done 80% (logout not yet)

--- a/view/index.html
+++ b/view/index.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="../style/responsive.css" media="screen and (max-width: 900px)" />
 
         <!--javascript-->
-        <script type="text/javascript" src="../script/jquery-3.2.1.min.js"></script>
-        <script type="text/javascript" src="../script/menuIcon.js"></script>
+        <script type="text/javascript" src="../controller/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="../controller/menuIcon.js"></script>
     </head>
     <body>
 
@@ -19,7 +19,7 @@
         <!--navigation bar-->
         <div class="nav_bar clear_fix">
             <!--main page link-->
-            <a href="index.html" class="stick_left"><img src="../resources/Home_Page.png" alt="Home Page" /></a>
+            <a href="index.html" class="stick_left"><img src="../drawable/Home_Page.png" alt="Home Page" /></a>
             <!--navigation bar for menu-->
             <div class="nav_box">
             <div><div class="nav_menu" onclick="menu_expander(this)">
