--- a/style/cr_up_event.css
+++ b/style/cr_up_event.css
@@ -4,6 +4,7 @@
     left:-50%;
     width:200%;
     height:200%;
+    z-index: -1;
 }
 
 #bg img {
@@ -28,6 +29,11 @@
     -moz-box-shadow: 0 0 20px black;
     -webkit-box-shadow: 0 0 20px black;
     box-shadow: 0 0 20px black;
+}
+
+div.nav_bar a img {
+    height: 37px;
+    padding: 6px 11px;
 }
 
 input[type=submit] {
@@ -56,7 +62,7 @@ input[type=text] {
 label {
     color: #1C1111;
     font-weight: 600;
-    font-family: "Berlin Sans FB";
+    font-family: "Berlin Sans FB", sans-serif;
     display: block;
     float: left;
 }
