--- a/view/event_list.html
+++ b/view/event_list.html
@@ -3,19 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Event List</title>
-        <script type="text/javascript" src="../script/jquery-3.2.1.min.js"></script>
-        <script type="text/javascript" src="../script/menuIcon.js"></script>
-        <script type="text/javascript" src="../script/ssFunction.js"></script>
+        <script type="text/javascript" src="../controller/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="../controller/menuIcon.js"></script>
+        <script type="text/javascript" src="../controller/ssFunction.js"></script>
         <link rel="stylesheet" href="../style/event_list.css" />
         <link rel="stylesheet" href="../style/global_nav.css" />
         <link rel="stylesheet" href="../style/responsive.css" media="screen and (max-width: 900px)" />
     </head>
     <body>
         <div class="nav_container">
-            <script language="javascript" type="text/javascript" src="../script/nav_bar_admin.js"></script>
+            <script language="javascript" type="text/javascript" src="../controller/nav_bar_admin.js"></script>
         </div>
         <div class="browse_container">
-            <script language="javascript" type="text/javascript" src="../script/eventList.js"></script>
+            <script language="javascript" type="text/javascript" src="../controller/eventList.js"></script>
         </div>
     </body>
 </html>
