integration of all components from yinghua to main directory

--- a/view/register/register.html
+++ b/view/register/register.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
-    <link rel="stylesheet" type="text/css" href="../style/app.css">
-    <link rel="stylesheet" type="text/css" href="../style/register.css">
+    <link rel="stylesheet" type="text/css" href="../../style/app/app.css">
+    <link rel="stylesheet" type="text/css" href="../../style/register/register.css">
 
     <!--Use Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Questrial|Roboto" rel="stylesheet">
 
     <!--Use Google CDN Jquery script for easier integration test -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../controller/register.js"></script>
+    <script type="text/javascript" src="../../script/register/register.js"></script>
 
 <body>
 
