--- a/view/login/login.html
+++ b/view/login/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Log In</title>
-    <link rel="stylesheet" type="text/css" href="../style/app.css">
-    <link rel="stylesheet" type="text/css" href="../style/login.css">
+    <link rel="stylesheet" type="text/css" href="../../style/app/app.css">
+    <link rel="stylesheet" type="text/css" href="../../style/login/login.css">
 
     <!--Use Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Questrial|Roboto" rel="stylesheet">
@@ -13,8 +13,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <!-- Cookies -->
-    <script type="text/javascript" src="../controller/cookie.js"></script>
-    <script type="text/javascript" src="../controller/login.js"></script>
+    <script type="text/javascript" src="../../script/cookie/cookie.js"></script>
+    <script type="text/javascript" src="../../script/login/login.js"></script>
 
 </head>
     <body>
