login and logout integration complete

--- a/view/login/login.html
+++ b/view/login/login.html
@@ -24,7 +24,7 @@
 
                 <h2>Event Management System Login</h2>
                 <div class="imgContainer">
-                    <img src="../drawable/user-icon.png" alt="user_icon" class="userIcon">
+                    <img src="../../resources/user-icon.png" alt="user_icon" class="userIcon">
                 </div>
 
                 <div class="detailContainer">
@@ -45,7 +45,7 @@
                         <option value="organizer">Organizer</option>
                     </select>
 
-                    <p>Do not have an account? <a href="register.html" style="color:darkblue"><b>Register Here</b></a></p>
+                    <p>Do not have an account? <a href="../register/register.html" style="color:darkblue"><b>Register Here</b></a></p>
 
                     <button class="submitButton" type="submit" id="login" onclick="setCookie()">Login</button>
 
