--- a/view/login/logout.html
+++ b/view/login/logout.html
@@ -17,7 +17,7 @@
         function removeCookies() {
             Cookies.remove('name');
             Cookies.remove('password');
-            window.location.replace("../view/login.html")
+            window.location.replace("../../view/login/login.html")
         }
     </script>
 </head>
