--- a/view/login/login.html
+++ b/view/login/login.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Questrial|Roboto" rel="stylesheet">
 
     <!--Use Google CDN Jquery script for easier integration test -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="../../script/jquery-3.2.1.min.js"></script>
 
     <!-- Cookies -->
     <script type="text/javascript" src="../../script/cookie/cookie.js"></script>
@@ -47,9 +47,9 @@
 
                     <p>Do not have an account? <a href="../register/register.html" style="color:darkblue"><b>Register Here</b></a></p>
 
-                    <button class="submitButton" type="submit" id="login" onclick="setCookie()">Login</button>
-
                     <p class="warning_message" id="login_warning"></p>
+
+                    <button class="submitButton" type="submit" id="login" onclick="setCookie()">Login</button>
                 </div>
             </div>
         </form>
