--- a/style/browse.css
+++ b/style/browse.css
@@ -7,15 +7,16 @@
 div.browse_container {
     /*width: 450px;*/
     /*height: 500px;*/
-    border: 2px solid red;
+    border: 3px solid grey;
     display: flex;
     justify-content: center;
-    background-color: #a6a6a6;
+    background-color: #5485B0;
     flex-wrap: wrap;
 }
 
 div.browse_box {
-    border: 2px solid black;
+    border: 5px solid black;
+    background-color: #bab6cc;
     width: 430px;
     height: 500px;
     display: flex;
@@ -86,9 +87,15 @@ div.flex_2 {
     /* set width and height */
     height: 1em;
     margin-top: 0.2em;
-    background: #a6a6a6;
+    background: #bab6cc;
 }
 
 input.apply_tix {
     width: 100%;
+    padding:3px;
+    border:2px solid rgba(0, 0, 0, 0.69);
+    -webkit-border-radius: 5px;
+    border-radius: 10px;
+    font-weight: bold;
+
 }
