--- a/style/event_list.css
+++ b/style/event_list.css
@@ -7,16 +7,16 @@
 div.browse_container {
     /*width: 450px;*/
     /*height: 500px;*/
-    border: 2px solid #0011ff;
+    border: 3px solid grey;
     display: flex;
     justify-content: center;
-    background-color: #4386ff;
+    background-color: #5485B0;
     flex-wrap: wrap;
 }
 
 div.browse_box {
-    border: 2px solid #0011ff;
-    background-color: #a797d9;
+    border: 5px solid black;
+    background-color: #bab6cc;
     width: 430px;
     height: 500px;
     display: flex;
@@ -87,9 +87,14 @@ div.flex_2 {
     /* set width and height */
     height: 1em;
     margin-top: 0.2em;
-    background: #a797d9;
+    background: #bab6cc;
 }
 
 input.apply_tix {
     width: 100%;
+    padding:3px;
+    border:2px solid rgba(0, 0, 0, 0.69);
+    -webkit-border-radius: 5px;
+    border-radius: 10px;
+    font-weight: bold;
 }
