login to browse and sign out to login complete

--- a/view/login/login.html
+++ b/view/login/login.html
@@ -10,11 +10,11 @@
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Questrial|Roboto" rel="stylesheet">
 
     <!--Use Google CDN Jquery script for easier integration test -->
-    <script type="text/javascript" src="../../script/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="../../controller/jquery-3.2.1.min.js"></script>
 
     <!-- Cookies -->
-    <script type="text/javascript" src="../../script/cookie/cookie.js"></script>
-    <script type="text/javascript" src="../../script/login/login.js"></script>
+    <script type="text/javascript" src="../../controller/cookie/cookie.js"></script>
+    <script type="text/javascript" src="../../controller/login/login.js"></script>
 
 </head>
     <body>
@@ -24,7 +24,7 @@
 
                 <h2>Event Management System Login</h2>
                 <div class="imgContainer">
-                    <img src="../../resources/user-icon.png" alt="user_icon" class="userIcon">
+                    <img src="../../drawable/user-icon.png" alt="user_icon" class="userIcon">
                 </div>
 
                 <div class="detailContainer">
