--- a/view/register/register.html
+++ b/view/register/register.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Questrial|Roboto" rel="stylesheet">
 
     <!--Use Google CDN Jquery script for easier integration test -->
-    <script type="text/javascript" src="../../script/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="../../script/register/register.js"></script>
+    <script type="text/javascript" src="../../controller/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="../controller/register/register.js"></script>
 
 <body>
 
