login to event list and sign out to login complete

--- a/view/event_list.html
+++ b/view/event_list.html
@@ -6,6 +6,8 @@
         <script type="text/javascript" src="../controller/jquery-3.2.1.min.js"></script>
         <script type="text/javascript" src="../controller/menuIcon.js"></script>
         <script type="text/javascript" src="../controller/ssFunction.js"></script>
+        <script type="text/javascript" src="../controller/cookie/cookie.js"></script>
+
         <link rel="stylesheet" href="../style/event_list.css" />
         <link rel="stylesheet" href="../style/global_nav.css" />
         <link rel="stylesheet" href="../style/responsive.css" media="screen and (max-width: 900px)" />
