integration and testing done

--- a/view/register/register.html
+++ b/view/register/register.html
@@ -11,11 +11,10 @@
 
     <!--Use Google CDN Jquery script for easier integration test -->
     <script type="text/javascript" src="../../controller/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="../controller/register/register.js"></script>
+    <script type="text/javascript" src="../../controller/register/register.js"></script>
 
 <body>
 
-<!-- Expected parameter to be developed in future: Action on database, Method with GET or POST -->
 <form method="get" id="registerForm" onsubmit="return validation()">
     <div class="detailContainer">
         <h2>Account Registration</h2>
