--- a/style/view_ticket.css
+++ b/style/view_ticket.css
@@ -1,17 +1,18 @@
 div.view_container {
     /*width: 450px;*/
     /*height: 500px;*/
-    border: 2px solid red;
+    border: 3px solid grey;
     display: flex;
     justify-content: center;
-    background-color: #a6a6a6;
+    background-color: #5485B0;
     flex-wrap: wrap;
 }
 
 div.view_box {
-    border: 2px solid black;
+    border: 5px solid black;
+    background-color: #bab6cc;
     width: 220px;
-    height: 270px;
+    height: 280px;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
@@ -20,6 +21,10 @@ div.view_box {
 }
 
 input.tix_info {
-    flex: 1;
     width: 100%;
+    padding:3px;
+    border:2px solid rgba(0, 0, 0, 0.69);
+    -webkit-border-radius: 5px;
+    border-radius: 10px;
+    font-weight: bold;
 }
