-view applied ticket is now fully working

--- a/view/create_event.html
+++ b/view/create_event.html
@@ -7,6 +7,7 @@
 		<meta charset="utf-8">
 		<title>Welcome to create event function.</title>
         <script type="text/javascript" src="../controller/jquery-3.2.1.min.js"></script>
+		<script type="text/javascript" src="../controller/cookie/cookie.js"></script>
         <script type="text/javascript" src="../controller/connect.js"></script>
 		<script type="text/javascript" src="../controller/menuIcon.js"></script>
 		<link rel="stylesheet" href="../style/global_nav.css" />
