--- a/view/view_event.html
+++ b/view/view_event.html
@@ -6,6 +6,7 @@
 
 		<title>Demo Retrieval</title>
 		<script type="text/javascript" src="../controller/jquery-3.2.1.min.js"></script>
+		<script type="text/javascript" src="../controller/cookie/cookie.js"></script>
 		<script type="text/javascript" src="../controller/menuIcon.js"></script>
 		<link rel="stylesheet" href="../style/view_event.css" />
 		<link rel="stylesheet" href="../style/global_nav.css" />
