--- a/view/about.html
+++ b/view/about.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>This is about page</title>
         <script type="text/javascript" src="../controller/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="../controller/cookie/cookie.js"></script>
         <script type="text/javascript" src="../controller/menuIcon.js"></script>
         <link rel="stylesheet" href="../style/global_nav.css" />
         <link rel="stylesheet" href="../style/about_page.css">
