--- a/view/event_list.html
+++ b/view/event_list.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Event List</title>
         <script type="text/javascript" src="../controller/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="../controller/cookie/cookie.js"></script>
         <script type="text/javascript" src="../controller/menuIcon.js"></script>
         <script type="text/javascript" src="../controller/ssFunction.js"></script>
         <script type="text/javascript" src="../controller/cookie/cookie.js"></script>
