--- a/view/view_ticket.html
+++ b/view/view_ticket.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>View Ticket</title>
         <script type="text/javascript" src="../controller/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="../controller/cookie/cookie.js"></script>
         <script type="text/javascript" src="../controller/menuIcon.js"></script>
         <script type="text/javascript" src="../controller/ssFunction.js"></script>
         <link rel="stylesheet" href="../style/global_nav.css" />
